feat: add new screen

--- a/baohiemanvuisongkhoe.html
+++ b/baohiemanvuisongkhoe.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bảo hiểm xe máy</title>
+  <title>An vui sống khoẻ</title>
   <link rel="stylesheet" href="/style.css" />
 </head>
 
@@ -56,15 +56,16 @@
   <div class="container">
 
     <div class="card-block">
-      <img src="https://baovietonline.com.vn/uploads/product/019310e7808afe2f3b13e982a08239e7.jpg" alt="" srcset="">
+      <img src="https://www.baovietnhantho.com.vn/storage/95d46c5e-778e-40aa-80a4-3b0382d6d58d/WebBVNT-01.jpg" alt=""
+        srcset="">
       <div class="content">
         <div style="display: flex; flex-direction: column; gap: 10px; width: 60%;">
           <p
             style="text-transform: capitalize; font-size: 24px; font-weight: 600; color: #0060ae; margin: 0; line-height: normal;">
-            Bảo hiểm xe máy</p>
+            An Vui Sống Khỏe</p>
           <p style="margin: 0; font-size: 14px;">
-            Bảo hiểm xe máy bao gồm Bảo hiểm Bắt buộc trách nhiệm dân sự và Bảo hiểm tai nạn người ngồi trên xe, giúp
-            bảo vệ khách hàng trước những rủi ro tài chính do tai nạn khi tham gia giao thông.
+            Chăm sóc sức khỏe chu toàn cho người tham gia cả trước, trong và sau điều trị, An Vui Sống Khỏe là tài sản
+            cần có của mỗi gia đình.
           </p>
         </div>
 
@@ -78,94 +79,65 @@
       </div>
     </div>
 
-    <div class="infor-item">
-      <div class="hightlight-btn">
-        <img class="hightlight-btn-img"
-          src="https://baovietonline.com.vn/uploads/product/638cb03539c9f7cd94102e23ad3aabd8.png" alt="" srcset="">
-        <p style="font-size: 14px;">Với một khoản chi phí nhỏ chỉ từ 66.000 đồng</p>
-      </div>
-      <div class="hightlight-btn">
-        <img class="hightlight-btn-img"
-          src="https://baovietonline.com.vn/uploads/product/a626bf688ea55c12b46efeddf83de274.png" alt="" srcset="">
-        <p style="font-size: 14px;">Bảo hiểm trách nhiệm dân sự của chủ xe và bảo hiểm tai nạn người ngồi trên xe</p>
+    <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
+      <p
+        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
+        QUYỀN LỢI ĐIỀU TRỊ NỘI TRÚ</p>
+      <div>
+        <img src="https://www.baovietnhantho.com.vn/storage/9c426a3c-d400-4574-97d5-1d4f688d69c7/quyen-loi-noi-tru.jpg"
+          alt="" srcset="">
       </div>
     </div>
 
-    <div class="infor-item" style="margin: 50px auto; flex-direction: column;">
+    <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
-        Đối tượng</p>
+        QUYỀN LỢI ĐIỀU TRỊ NỘI TRÚ - CHI TRẢ ĐIỀU TRỊ UNG THƯ, CẤY GHÉP NỘI TẠNG</p>
       <div>
-        <ul style="list-style:disc">
-          <li>Các doanh nghiệp vận tải, dịch vụ vận chuyển bằng xe máy</li>
-          <li>Mọi cá nhân trong và ngoài nước sở hữu và sử dụng xe máy</li>
-          <li>Hãng sản xuất và cung cấp xe máy</li>
-          <li>Khách hàng cá nhân sở hữu xe máy.</li>
+        <img src="https://www.baovietnhantho.com.vn/storage/9c426a62-7ebb-4a86-9898-200bb2e0d6d8/dieu-tri-ung-thu.jpg"
+          alt="" srcset="">
+      </div>
+    </div>
+
+    <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
+      <p
+        style="text-transform: uppercase; font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
+        QUYỀN LỢI THAI SẢN VÀ ĐIỀU TRỊ NGOẠI TRÚ ĐẶC BIỆT</p>
+      <div>
+        <img src="https://www.baovietnhantho.com.vn/storage/9c426a7b-b630-4cd1-a25e-d1dbb30ce434/ngoai-tru-dac-biet.jpg"
+          alt="" srcset="">
+      </div>
+    </div>
+
+    <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
+      <p
+        style="text-transform: uppercase; font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
+        QUYỀN LỢI ĐIỀU TRỊ NGOẠI TRÚ VÀ ĐIỀU TRỊ NHA KHOA</p>
+      <div>
+        <img
+          src="https://www.baovietnhantho.com.vn/storage/9c426a88-c786-40e3-b604-7f1bb9476159/quyen-loi-ngoai-tru.jpg"
+          alt="" srcset="">
+      </div>
+    </div>
+
+    <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
+      <p
+        style="text-transform: uppercase; font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
+        GIA TĂNG BẢO VỆ Gia đình</p>
+      <div>
+        <ul style="list-style:number">
+          <p style="margin-top: 0;">Khách hàng được tham gia thêm đa dạng các Sản phẩm bán kèm cho cả bản thân và người
+            thân trong gia đình:
+            <br />
+            • Nhóm sản phẩm chăm sóc sức khỏe.
+            <br />
+            • Nhóm sản phẩm bảo vệ trước các rủi ro tai nạn.
+            <br />
+            • Nhóm sản phẩm miễn đóng phí khi gặp rủi ro.
+          </p>
         </ul>
       </div>
     </div>
-
-    <div class="infor-item" style="margin: 50px auto; flex-direction: column;">
-      <p
-        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
-        Quyền lợi chính</p>
-      <div style="display: flex; justify-content: center; gap: 20px">
-        <div class="benefits-tab">
-          <p style="font: 14px; margin: 0;">Khách hàng sẽ được bồi thường</p>
-          <p style="font-size: 12px; color:#666666">Thiệt hại về Người và Tài sản đối với bên thứ ba do xe máy gây ra
-          </p>
-        </div>
-        <div class="benefits-tab">
-          <p style="font: 14px; margin: 0;">Khách hàng sẽ được bồi thường</p>
-          <p style="font-size: 12px; color:#666666">Thiệt hại về thân thể đối với người ngồi trên xe</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="infor-item" style="margin: 50px auto; display: flex; flex-direction: column;">
-      <p
-        style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
-        Tài liệu biểu mẫu</p>
-      <div id="documentation" style="display: flex; gap: 20px; width: 100%; align-items: start;">
-        <img
-          style="width: 270px; height: 240px; object-fit: contain; border-top-left-radius: 10px; border-bottom-right-radius: 10px;"
-          src="https://baovietonline.com.vn/templates/images/tai_lieu_bieu_mau.png" alt="" srcset="">
-        <div style="width: 100%; display: flex; flex-direction: column; gap:10px">
-          <div
-            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 2px 25px; border-radius: 50px; box-sizing: border-box;">
-            <div style="display: flex; gap: 10px; align-items: center;">
-              <img style="width: 17px; height: 19px;"
-                src="https://baovietonline.com.vn/templates/images/icon_tai_lieu_bieu_mau.png" alt="" srcset="">
-              <p>
-                Giấy yêu cầu bảo hiểm</p>
-            </div>
-            <a style="display: flex; gap:10px; align-items: center; width: fit-content; cursor: pointer;"
-              href="https://baovietonline.com.vn/uploads/attachment/da43442160f56501857f51256255246a.pdf">
-              Tải xuống
-              <img style="width: 15px; height: 15px;"
-                src="https://baovietonline.com.vn/templates/images/icon_download.png" alt="" srcset="">
-            </a>
-          </div>
-          <div
-            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 2px 25px; border-radius: 50px; box-sizing: border-box;">
-            <div style="display: flex; gap: 10px; align-items: center;">
-              <img style="width: 17px; height: 19px;"
-                src="https://baovietonline.com.vn/templates/images/icon_tai_lieu_bieu_mau.png" alt="" srcset="">
-              <p>Nghị định 67-2023</p>
-            </div>
-            <a style="display: flex; gap:10px; align-items: center; width: fit-content; cursor: pointer;"
-              href="https://baovietonline.com.vn/uploads/attachment/nghi-dinh-67-2023-bao-hiem-xe-may-vi.pdf">
-              Tải xuống
-              <img style="width: 15px; height: 15px;"
-                src="https://baovietonline.com.vn/templates/images/icon_download.png" alt="" srcset="">
-            </a>
-          </div>
-
-        </div>
-      </div>
-    </div>
-
-
   </div>
 
 
