--- a/baohiemintercare.html
+++ b/baohiemintercare.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bảo hiểm oto, xe máy</title>
+  <title>Bảo hiểm Intercare </title>
   <link rel="stylesheet" href="/style.css" />
 </head>
 
@@ -56,15 +56,15 @@
   <div class="container">
 
     <div class="card-block">
-      <img src="https://baovietonline.com.vn/uploads/product/4ce1ea0b8040a97682d8fac324edf637.jpg" alt="" srcset="">
+      <img src="https://baovietonline.com.vn/uploads/product/9d21949d2e2c734e19b8574b2dea4f34.jpg" alt="" srcset="">
       <div class="content">
         <div style="display: flex; flex-direction: column; gap: 10px; width: 60%;">
           <p
             style="text-transform: capitalize; font-size: 24px; font-weight: 600; color: #0060ae; margin: 0; line-height: normal;">
-            Bảo hiểm vật chất xe ô tô</p>
+            Bảo hiểm Intercare
+          </p>
           <p style="margin: 0; font-size: 14px;">
-            Được thiết kế để bảo vệ phần vật chất của xe ô tô, xe máy hoặc các phương tiện giao thông khác, bồi thường
-            cho chủ sở hữu xe trong các trường hợp tai nạn bất ngờ, bất khả kháng hoặc mất toàn bộ xe do trộm cướp.
+            Giúp kết nối khách hàng với hệ thống y tế cao cấp trong và ngoài nước, có Intercare, an tâm sức khỏe.
           </p>
         </div>
 
@@ -78,73 +78,75 @@
       </div>
     </div>
 
-    <div class="infor-item" id="hightlight">
+    <div class="infor-item" id="hightlight"
+      style="width: 75%; margin: 50px auto; display: flex; gap: 20px; justify-content: center;">
       <div class="hightlight-btn">
         <img class="hightlight-btn-img"
-          src="https://baovietonline.com.vn/uploads/product/638cb03539c9f7cd94102e23ad3aabd8.png" alt="" srcset="">
-        <p style="font-size: 14px;">Có mặt tại tất cả tỉnh thành trên toàn quốc</p>
+          src="https://baovietonline.com.vn/uploads/product/0d2f7b168a3ad7b2f4687ec31c3f2aea.png" alt="" srcset="">
+        <p style="font-size: 14px;">Nhiều hạn mức chi trả khác nhau: hỗ trợ điều trị nội ngoại trú, khám thai sản, bảo
+          hiểm sinh mạng, quyền lợi nha khoa, bảo hiểm tai nạn cá nhân</p>
       </div>
       <div class="hightlight-btn">
         <img class="hightlight-btn-img"
-          src="https://baovietonline.com.vn/uploads/product/a5eb6d6e75ba58f2dcc03d10f7f4dd0e.png" alt="" srcset="">
-        <p style="font-size: 14px;">Bảo lãnh chi phí sửa chữa tại các garage trên toàn quốc</p>
+          src="https://baovietonline.com.vn/uploads/product/da9974829f0589595281b51e39e03f09.png" alt="" srcset="">
+        <p style="font-size: 14px;">Bảo hiểm cho du học sinh Việt Nam đang sinh sống và học tập tại nước ngoài</p>
       </div>
       <div class="hightlight-btn">
         <img class="hightlight-btn-img"
-          src="https://baovietonline.com.vn/uploads/product/1b44795fa3f442a535f5906772c0c8bb.png" alt="" srcset="">
-        <p style="font-size: 14px;">Khách hàng có thể lựa chọn bảo hiểm theo gói hoặc mua lẻ</p>
+          src="https://baovietonline.com.vn/uploads/product/b7d39227b67ed37d2b3dc947dfbbd7af.png" alt="" srcset="">
+        <p style="font-size: 14px;">Thủ tục tham gia bảo hiểm nhanh chóng, đơn giản, không yêu cầu khám tổng quát sức
+          khỏe trước khi tham gia bảo hiểm</p>
       </div>
       <div class="hightlight-btn">
         <img class="hightlight-btn-img"
-          src="https://baovietonline.com.vn/uploads/product/af4784344ac5f3f53e82a7173e290979.png" alt="" srcset="">
-        <p style="font-size: 14px;">Thông báo tái tục hợp đồng bảo hiểm miễn phí</p>
+          src="https://baovietonline.com.vn/uploads/product/66c9f5fc17ad79bb33ef9ce516c5575a.png" alt="" srcset="">
+        <p style="font-size: 14px;">Được bảo vệ với hệ thống cơ sở y tế tân tiến, uy tín trong và ngoài nước</p>
+      </div>
+      <div class="hightlight-btn">
+        <img class="hightlight-btn-img"
+          src="https://baovietonline.com.vn/uploads/product/70e9520094da6e55c9589af5b8d12dbf.png" alt="" srcset="">
+        <p style="font-size: 14px;">Chính sách vận chuyển cấp cứu đường hàng không mở rộng phạm vi ngoài Việt Nam</p>
       </div>
     </div>
 
-    <div class="infor-item" style="margin: 50px auto; flex-direction: column;">
+    <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
         Đối tượng</p>
       <div>
         <ul style="list-style:disc">
-          <li>Cá nhân, tổ chức, chủ sở hữu xe ô tô</li>
+          <li>Áp dụng cho khách hàng từ 15 ngày tuổi đến 70 tuổi. Khách hàng trẻ em dưới 9 tuổi cần mua kèm với hợp đồng
+            bảo hiểm của người lớn.</li>
         </ul>
       </div>
     </div>
 
-    <div class="infor-item" style="margin: 50px auto; flex-direction: column;">
+    <div class="infor-item" style="display: flex; flex-direction: column; width: 75%; margin: 50px auto;">
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
         Quyền lợi chính</p>
-      <div style="display: flex; justify-content: center; gap: 20px" id="benefit-tabs">
+      <div id="benefit-tabs" style="display: flex; justify-content: center; gap: 20px">
         <div class="benefits-tab">
-          <p style="font: 14px; margin: 0;">Bồi thường Bảo hiểm vật chất xe</p>
-          <p style="font-size: 12px; color:#666666">Bảo Hiểm Bảo Việt chịu trách nhiệm bồi thường cho Người được bảo
-            hiểm
-            những thiệt
-            hại vật chất do thiên
-            tai, tai nạn bất ngờ, không lường trước được trong những trường hợp sau: Đâm va, lật, đổ, lệch trọng tâm,
-            chìm, rơi toàn bộ xe; bị các vật thể khác từ bên ngoài rơi, va chạm vào Hỏa hoạn, cháy, nổ; Những tai họa
-            bất khả kháng do thiên nhiên gây ra Mất toàn bộ xe do trộm, cướp </p>
+          <p style="font: 14px; margin: 0;">Giới hạn trách nhiệm khi điều trị nội trú lên đến 10.500.000.000đ/người/năm
+          </p>
+          <p style="font-size: 12px; color:#666666">Bao gồm tiền phòng bệnh, tiền giường nghỉ cho người nhà, chi phí xét
+            nghiệm, điều trị và các chi phí bệnh viện tổng hợp.
+          </p>
         </div>
         <div class="benefits-tab">
-          <p style="font: 14px; margin: 0;">Thanh toán cho Người được bảo hiểm những chi phí cần thiết và hợp lý để thực
-            hiện các công việc theo yêu cầu và chỉ dẫn của Bảo Việt khi xảy ra thiệt hại thuộc phạm vi bảo hiểm, bảo gồm
-            các chi phí:</p>
-          <p style="font-size: 12px; color:#666666">Chi phí ngăn ngừa hạn chế thiệt hại phát sinh thêm Chi phí cứu hộ và
-            vận chuyển xe bị thiệt hại tới nơi sửa chữa gần nhất tối đa không vượt quá mười phần trăm (10%) số tiền bảo
-            hiểm của xe đó. </p>
+          <p style="font: 14px; margin: 0;">Bảo hiểm tai nạn cá nhân</p>
+          <p style="font-size: 12px; color:#666666">Giới hạn trách nhiệm tối đa 1 tỷ/người/vụ </p>
         </div>
         <div class="benefits-tab">
-          <p style="font: 14px; margin: 0;">Tham gia thêm các điều khoản mở rộng:</p>
-          <p style="font-size: 12px; color:#666666">Bảo hiểm không khấu hao thay mới Bảo hiểm sửa chữa xe tại garage
-            chính hãng Bảo hiểm xe bị ngập nước Bảo hiểm mất cắp bộ phận Bảo hiểm thanh toán chi phí thuê xe Bảo hiểm
-            bồi thường theo giới hạn trách nhiệm Bảo hiểm thiệt hại xảy ra ngoài lãnh thổ Việt Nam </p>
+          <p style="font: 14px; margin: 0;">Bảo hiểm sinh mệnh cá nhân</p>
+          <p style="font-size: 12px; color:#666666">Giới hạn trách nhiệm tối đa 1 tỷ/người/vụ</p>
         </div>
       </div>
+
     </div>
 
-    <div class="infor-item" style="margin: 50px auto; display: flex; flex-direction: column;">
+    <div class="infor-item"
+      style="display: flex; flex-direction: column; width: 75%; margin: 50px auto; display: flex; flex-direction: column;">
       <p
         style="font-size: 24px; font-weight: 600; color: #0060ae; padding-bottom: 10px; border-bottom: 1px solid rgba(0, 0, 0, 0.274);">
         Tài liệu biểu mẫu</p>
@@ -159,10 +161,10 @@
             <div style="display: flex; gap: 10px; align-items: center;">
               <img style="width: 17px; height: 19px;"
                 src="https://baovietonline.com.vn/templates/images/icon_tai_lieu_bieu_mau.png" alt="" srcset="">
-              <p>Danh sách Garage liên kết với BHBV</p>
+              <p>Quy tắc Intercare</p>
             </div>
             <a style="display: flex; gap:10px; align-items: center; width: fit-content; cursor: pointer;"
-              href="https://baovietonline.com.vn/uploads/attachment/danh-sach-garage-lien-ket-voi-bhbv-bao-hiem-vat-chat-xe-o-to-vi.xlsx">
+              href="https://baovietonline.com.vn/uploads/attachment/c1cac82b666e25113a05c54b9d500ee3.pdf">
               Tải xuống
               <img style="width: 15px; height: 15px;"
                 src="https://baovietonline.com.vn/templates/images/icon_download.png" alt="" srcset="">
@@ -173,16 +175,30 @@
             <div style="display: flex; gap: 10px; align-items: center;">
               <img style="width: 17px; height: 19px;"
                 src="https://baovietonline.com.vn/templates/images/icon_tai_lieu_bieu_mau.png" alt="" srcset="">
-              <p>Quy tắc bảo hiểm vật chất Ô Tô</p>
+              <p>
+                Quyền lợi bảo hiểm</p>
             </div>
             <a style="display: flex; gap:10px; align-items: center; width: fit-content; cursor: pointer;"
-              href="https://baovietonline.com.vn/uploads/attachment/quy-tac-bao-hiem-vat-chat-o-to-bao-hiem-vat-chat-xe-vi-1710993149.pdf">
+              href="https://baovietonline.com.vn/uploads/attachment/5106fda0d9ed7634cfb644365c8f48f0.pdf">
               Tải xuống
               <img style="width: 15px; height: 15px;"
                 src="https://baovietonline.com.vn/templates/images/icon_download.png" alt="" srcset="">
             </a>
           </div>
-
+          <div
+            style="display: flex; justify-content: space-between; background: #f5f5f5; width: 100%; padding: 2px 25px; border-radius: 50px; box-sizing: border-box;">
+            <div style="display: flex; gap: 10px; align-items: center;">
+              <img style="width: 17px; height: 19px;"
+                src="https://baovietonline.com.vn/templates/images/icon_tai_lieu_bieu_mau.png" alt="" srcset="">
+              <p>Bộ câu hỏi thường gặp</p>
+            </div>
+            <a style="display: flex; gap:10px; align-items: center; width: fit-content; cursor: pointer;"
+              href="https://baovietonline.com.vn/uploads/attachment/102408939e481b85487b8cd66d00884b.pdf">
+              Tải xuống
+              <img style="width: 15px; height: 15px;"
+                src="https://baovietonline.com.vn/templates/images/icon_download.png" alt="" srcset="">
+            </a>
+          </div>
         </div>
       </div>
     </div>
