--- a/baohiemtravel.html
+++ b/baohiemtravel.html
@@ -13,7 +13,19 @@
     <img class="logo" src="https://baovietonline.com.vn/templates/images/logo2x.png" alt="Logo Bảo Việt Đà Nẵng">
     <ul class="navigation-items">
       <li class="" onclick="window.location.href='/'">Trang chủ</a></li>
-      <li class="">Bảo hiểm nhân thọ</li>
+      <li class="has-popover">Bảo hiểm nhân thọ
+        <div class="popover">
+          <ul class="submenu">
+            <li onclick="window.location.href='/baohiemantamhoachdinh.html'">An Tâm Hoạch Định</li>
+            <li onclick="window.location.href='/baohiemankhangnhuy.html'">An Khang Như Ý</li>
+            <li onclick="window.location.href='/baohiemanphatcattuong.html'">An Phát Cát Tường</li>
+            <li onclick="window.location.href='/baohiemankhanghanhphuc.html'">An Khang Hạnh Phúc</li>
+            <li onclick="window.location.href='/baohiemanvuisongkhoe.html'">An vui sống khoẻ</li>
+            <li onclick="window.location.href='/baohiemantamhocvan.html'">An tâm học vấn</li>
+            <li onclick="window.location.href='/index.html'">An phát trọn đời</li>
+          </ul>
+        </div>
+      </li>
       <li class="has-popover">Bảo hiểm phi nhân thọ
         <div class="popover">
           <ul class="submenu">
@@ -21,14 +33,14 @@
             <li onclick="window.location.href='/baohiemchayno.html'">Bảo hiểm cháy, nổ bắt buộc</li>
             <li onclick="window.location.href='/index.html'">Bảo hiểm mọi rủi ro tài sản </li>
             <li onclick="window.location.href='/baohiemsuckhoe.html'">Bảo Việt An Gia </li>
-            <li>Bảo hiểm Intercare </li>
-            <li>Bảo hiểm xe máy</li>
+            <li onclick="window.location.href='/baohiemintercare.html'">Bảo hiểm Intercare </li>
+            <li onclick="window.location.href='/baohiemxemay.html'">Bảo hiểm xe máy</li>
             <li onclick="window.location.href='/baohiemtravel.html'">Bảo hiểm du lịch Flexi</li>
           </ul>
         </div>
       </li>
       <li class="">Tuyển dụng</li>
-      <li class="">Tin tức</li>
+
     </ul>
     <div class="contact-wrapper">
       <img class="phone-logo" src="https://img.icons8.com/ios_filled/512/FAB005/apple-phone.png" alt="Phone icon"
